--- a/python-ii-pandas/DataMunging.ipynb
+++ b/python-ii-pandas/DataMunging.ipynb
@@ -15,7 +15,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ""
+    "Objective:\n",
+    "* No missing values (None, N/A, ...)\n",
+    "* No invalid values (NaN, inf, ' ', ...)\n",
+    "* Enumerable values (only enum, int, or float / double; e.g. no str / object)\n",
+    "* Feature engineering (domain logic => hypothize extracted features)"
    ]
   },
   {
@@ -2872,11 +2876,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   1. ,    0. ,    3. , ...,    0. ,    1. ,   66. ],\n       [   2. ,    1. ,    1. , ...,    0. ,    1. ,   38. ],\n       [   3. ,    1. ,    3. , ...,    0. ,    0. ,   78. ],\n       ..., \n       [ 889. ,    0. ,    3. , ...,    1. ,    3. ,   64.5],\n       [ 890. ,    1. ,    1. , ...,    0. ,    0. ,   26. ],\n       [ 891. ,    0. ,    3. , ...,    0. ,    0. ,   96. ]])"
+      ]
+     },
+     "execution_count": 146,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
    "source": [
-    ""
+    "train_data = df_lean.values\n",
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['1', '0', '3', ..., '7.25', '', 'S'],\n       ['2', '1', '1', ..., '71.2833', 'C85', 'C'],\n       ['3', '1', '3', ..., '7.925', '', 'S'],\n       ..., \n       ['889', '0', '3', ..., '23.45', '', 'S'],\n       ['890', '1', '1', ..., '30', 'C148', 'C'],\n       ['891', '0', '3', ..., '7.75', '', 'Q']], \n      dtype='<U82')"
+      ]
+     },
+     "execution_count": 148,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "data"
    ]
   }
  ],
