Added some more intro text

--- a/python-ii-pandas/DataMunging.ipynb
+++ b/python-ii-pandas/DataMunging.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,7 +28,16 @@
     "* No missing values (None, N/A, ...)\n",
     "* No invalid values (NaN, inf, ' ', ...)\n",
     "* Enumerable values (only enum, int, or float / double; e.g. no str / object)\n",
-    "* Feature engineering (domain logic => hypothize extracted features)"
+    "* Feature engineering (domain logic => hypothesis: Some compund features will derive the greatest contribution)\n",
+    "\n",
+    "Procedure:\n",
+    "1. Overview data schema\n",
+    "2. Identify any dimensionality issues\n",
+    "3. Cleanse features with missing, invalid or inumerable values:\n",
+    "    1. Missing: Drop (filter) or fill in?\n",
+    "    2. Invalid: Manipulate (transpolate) or replace?\n",
+    "    3. Is enumeration viable?\n",
+    "4. Add compound features, if warranted"
    ]
   },
   {
