Reimplementing DataMunging in RandomForests

--- a/random_forests/RandomForests.ipynb
+++ b/random_forests/RandomForests.ipynb
@@ -11,21 +11,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
-    "\\\"\\\"\\\"\n",
-    "http://nbconvert.readthedocs.org/en/latest/execute_api.html#a-quick-example\n",
-    "\\\"\\\"\\\"\n",
-    "import nbformat\n",
-    "from nbconvert.preprocessors import ExecutePreprocessor\n",
+    "    \"\"\"\n",
+    "    http://nbconvert.readthedocs.org/en/latest/execute_api.html#a-quick-example\n",
+    "    \"\"\"\n",
+    "    import nbformat\n",
+    "    from nbconvert.preprocessors import ExecutePreprocessor\n",
     "\n",
-    "with open(\"python_ii_pandas/DataMunging.ipynb\") as f:\n",
-    "    nb = nbformat.read(f, as_version=4)\n",
+    "    with open(\"python_ii_pandas/DataMunging.ipynb\") as f:\n",
+    "        nb = nbformat.read(f, as_version=4)\n",
     "    \n",
-    "ep = ExecutePreprocessor()\n",
-    "nb_execution_path = 'notebooks/'\n",
-    "resources = {'metadata': {'path': nb_execution_path}}\n",
-    "ep.preprocess(nb, resources)\n",
-    "\"\"\""
+    "    ep = ExecutePreprocessor()\n",
+    "    nb_execution_path = 'notebooks/'\n",
+    "    resources = {'metadata': {'path': nb_execution_path}}\n",
+    "    ep.preprocess(nb, resources)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/train.csv', header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
