All but finished RandomForest (testing remains)

--- a/python_ii_pandas/DataMunging.ipynb
+++ b/python_ii_pandas/DataMunging.ipynb
@@ -21,11 +21,13 @@
     "* Enumerable values (only enum, int, or float / double; e.g. no str / object)\n",
     "* Feature engineering (domain logic => hypothesis: Some compund features will derive the greatest contribution)\n",
     "\n",
+    "Caveat! Every data processing decision will probably affect the model's predictive performance.\n",
+    "\n",
     "Procedure:\n",
     "1. Overview data schema\n",
     "2. Identify any dimensionality issues\n",
     "3. Cleanse features with missing, invalid or inumerable values:\n",
-    "    1. Missing: Drop (filter) or fill in?\n",
+    "    1. Missing: Drop (filter) or fill? And if filling in, what with (zero-order = most probable / mode, more complex logic)\n",
     "    2. Invalid: Manipulate (transpolate) or replace?\n",
     "    3. Is enumeration viable?\n",
     "4. Add compound features, if warranted"
@@ -921,7 +923,6 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
      "output_type": "execute_result",
      "metadata": {}
     }
