--- a/random_forests/RandomForests.ipynb
+++ b/random_forests/RandomForests.ipynb
@@ -132,11 +132,17 @@
     "print(prediction.shape)\n",
     "print(np.unique(prediction))\n",
     "print(np.bincount(prediction, minlength=2))\n",
-    "\n",
-    "\n",
-    "X = \n",
-    "y = \n",
-    "model.score(X, y)"
+    "score = model.score(X, y)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
