--- a/random_forests/RandomForests.ipynb
+++ b/random_forests/RandomForests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,9 @@
     "    for i, s in enumerate(df):\n",
     "        if df[s].count() < len(df):\n",
     "            print(s, df[s].count())\n",
-    "       \n",
+    "    \n",
+    "    print(\"Enumerating str/object data:\")\n",
+    "    \n",
     "    print(\"Enumerating Sex:\")\n",
     "    print(df['Sex'].unique())\n",
     "    df['Gender'] = df['Sex'].map({'female': 0, 'male': 1}).astype(int)\n",
@@ -31,6 +33,8 @@
     "    print(df['Embarked'].unique())\n",
     "    df['EmbarkedEnum'] = df['Embarked'].dropna().map({'C': 1, 'S': 2, 'Q': 3}).astype(int)\n",
     "    df = df.drop(['Embarked'], axis=1)\n",
+    "    \n",
+    "    print(\"Filling missing data:\")\n",
     "    \n",
     "    print(\"Filling other missing numeric values with zeroeth-order approximation -- the most probable value (mode):\")\n",
     "    for field in ('EmbarkedEnum', 'SibSp', 'Parch', 'Fare'):\n",
@@ -49,6 +53,8 @@
     "            df.loc[(df.Age.isnull()) & (df.Gender == i) & (df.Pclass == j + 1), 'AgeFill'] = median_ages[i, j]\n",
     "    df = df.drop(['Age'], axis=1)\n",
     "    \n",
+    "    print(\"Separating attributes from labels and observation IDs\")\n",
+    "    \n",
     "    y = None\n",
     "    if 'Survived' in df:\n",
     "        print(\"Separating Survived, which is not part of the parameters (\\\"X\\\")\")\n",
@@ -62,8 +68,8 @@
     "    print(\"Feature engineering:\")\n",
     "    df['FamilySize'] = df['SibSp'] + df['Parch']\n",
     "    df['Age*Class'] = df.AgeFill * df.Pclass\n",
-    "    \n",
-    "    print(\"Cleansed training data:\")\n",
+    "       \n",
+    "    print(\"Cleansed %s:\" % data_file_path)\n",
     "    print(df.info())\n",
     "    print(df.describe())\n",
     "    assert len(\n",
@@ -102,28 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "information schema description:\n<class 'pandas.core.frame.DataFrame'>\nInt64Index: 891 entries, 0 to 890\nData columns (total 12 columns):\nPassengerId    891 non-null int64\nSurvived       891 non-null int64\nPclass         891 non-null int64\nName           891 non-null object\nSex            891 non-null object\nAge            714 non-null float64\nSibSp          891 non-null int64\nParch          891 non-null int64\nTicket         891 non-null object\nFare           891 non-null float64\nCabin          204 non-null object\nEmbarked       889 non-null object\ndtypes: float64(2), int64(5), object(5)\nmemory usage: 90.5+ KB\nNone\n       PassengerId    Survived      Pclass         Age       SibSp  \\\ncount   891.000000  891.000000  891.000000  714.000000  891.000000   \nmean    446.000000    0.383838    2.308642   29.699118    0.523008   \nstd     257.353842    0.486592    0.836071   14.526497    1.102743   \nmin       1.000000    0.000000    1.000000    0.420000    0.000000   \n25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n75%     668.500000    1.000000    3.000000   38.000000    1.000000   \nmax     891.000000    1.000000    3.000000   80.000000    8.000000   \n\n            Parch        Fare  \ncount  891.000000  891.000000  \nmean     0.381594   32.204208  \nstd      0.806057   49.693429  \nmin      0.000000    0.000000  \n25%      0.000000    7.910400  \n50%      0.000000   14.454200  \n75%      0.000000   31.000000  \nmax      6.000000  512.329200  \nSummary of attributes with values missing:\nAge 714\nCabin 204\nEmbarked 889\nEnumerating Sex:\n['male' 'female']\nEnumerating Embarked:\n['S' 'C' 'Q' nan]\nFilling other missing numeric values with zeroeth-order approximation -- the most probable value (mode):\nFilling Age:\nSeparating Survived, which is not part of the parameters (\"X\")"
+      "information schema description:\n<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 891 entries, 0 to 890\nData columns (total 12 columns):\nPassengerId    891 non-null int64\nSurvived       891 non-null int64\nPclass         891 non-null int64\nName           891 non-null object\nSex            891 non-null object\nAge            714 non-null float64\nSibSp          891 non-null int64\nParch          891 non-null int64\nTicket         891 non-null object\nFare           891 non-null float64\nCabin          204 non-null object\nEmbarked       889 non-null object\ndtypes: float64(2), int64(5), object(5)\nmemory usage: 83.6+ KB\nNone\n       PassengerId    Survived      Pclass         Age       SibSp  \\\ncount   891.000000  891.000000  891.000000  714.000000  891.000000   \nmean    446.000000    0.383838    2.308642   29.699118    0.523008   \nstd     257.353842    0.486592    0.836071   14.526497    1.102743   \nmin       1.000000    0.000000    1.000000    0.420000    0.000000   \n25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n75%     668.500000    1.000000    3.000000   38.000000    1.000000   \nmax     891.000000    1.000000    3.000000   80.000000    8.000000   \n\n            Parch        Fare  \ncount  891.000000  891.000000  \nmean     0.381594   32.204208  \nstd      0.806057   49.693429  \nmin      0.000000    0.000000  \n25%      0.000000    7.910400  \n50%      0.000000   14.454200  \n75%      0.000000   31.000000  \nmax      6.000000  512.329200  \nSummary of attributes with values missing:\nAge 714\nCabin 204\nEmbarked 889\nEnumerating str/object data:\nEnumerating Sex:\n['male' 'female']\nEnumerating Embarked:\n['S' 'C' 'Q' nan]\nFilling missing data:\nFilling other missing numeric values with zeroeth-order approximation -- the most probable value (mode):\nFilling Age:\nSeparating attributes from labels and observation IDs\nSeparating Survived, which is not part of the parameters (\"X\")\ndon't even bother enumerating these fields, just drop them:\nFeature engineering:\nCleansed data/train.csv:\n<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 891 entries, 0 to 890\nData columns (total 9 columns):\nPclass          891 non-null int64\nSibSp           891 non-null int64\nParch           891 non-null int64\nFare            891 non-null float64\nGender          891 non-null int32\nEmbarkedEnum    891 non-null float64\nAgeFill         891 non-null float64\nFamilySize      891 non-null int64\nAge*Class       891 non-null float64\ndtypes: float64(4), int32(1), int64(4)\nmemory usage: 59.2 KB\nNone\n           Pclass       SibSp       Parch        Fare      Gender  \\\ncount  891.000000  891.000000  891.000000  891.000000  891.000000   \nmean     2.308642    0.523008    0.381594   32.204208    0.647587   \nstd      0.836071    1.102743    0.806057   49.693429    0.477990   \nmin      1.000000    0.000000    0.000000    0.000000    0.000000   \n25%      2.000000    0.000000    0.000000    7.910400    0.000000   \n50%      3.000000    0.000000    0.000000   14.454200    1.000000   \n75%      3.000000    1.000000    0.000000   31.000000    1.000000   \nmax      3.000000    8.000000    6.000000  512.329200    1.000000   \n\n       EmbarkedEnum     AgeFill  FamilySize   Age*Class  \ncount    891.000000  891.000000  891.000000  891.000000  \nmean       1.897868   29.112424    0.904602   62.614860  \nstd        0.514624   13.304424    1.613459   31.362024  \nmin        1.000000    0.420000    0.000000    0.920000  \n25%        2.000000   21.500000    0.000000   40.000000  \n50%        2.000000   26.000000    0.000000   63.000000  \n75%        2.000000   36.000000    1.000000   75.000000  \nmax        3.000000   80.000000   10.000000  222.000000  \n(891,) (891, 9) (891,)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\ndon't even bother enumerating these fields, just drop them:\nFeature engineering:\nCleansed training data:\n<class 'pandas.core.frame.DataFrame'>\nInt64Index: 891 entries, 0 to 890\nData columns (total 9 columns):\nPclass          891 non-null int64\nSibSp           891 non-null int64\nParch           891 non-null int64\nFare            891 non-null float64\nGender          891 non-null int32\nEmbarkedEnum    891 non-null float64\nAgeFill         891 non-null float64\nFamilySize      891 non-null int64\nAge*Class       891 non-null float64\ndtypes: float64(4), int32(1), int64(4)\nmemory usage: 66.1 KB\nNone\n           Pclass       SibSp       Parch        Fare      Gender  \\\ncount  891.000000  891.000000  891.000000  891.000000  891.000000   \nmean     2.308642    0.523008    0.381594   32.204208    0.647587   \nstd      0.836071    1.102743    0.806057   49.693429    0.477990   \nmin      1.000000    0.000000    0.000000    0.000000    0.000000   \n25%      2.000000    0.000000    0.000000    7.910400    0.000000   \n50%      3.000000    0.000000    0.000000   14.454200    1.000000   \n75%      3.000000    1.000000    0.000000   31.000000    1.000000   \nmax      3.000000    8.000000    6.000000  512.329200    1.000000   \n\n       EmbarkedEnum     AgeFill  FamilySize   Age*Class  \ncount    891.000000  891.000000  891.000000  891.000000  \nmean       1.897868   29.112424    0.904602   62.614860  \nstd        0.514624   13.304424    1.613459   31.362024  \nmin        1.000000    0.420000    0.000000    0.920000  \n25%        2.000000   21.500000    0.000000   40.000000  \n50%        2.000000   26.000000    0.000000   63.000000  \n75%        2.000000   36.000000    1.000000   75.000000  \nmax        3.000000   80.000000   10.000000  222.000000  \n(891,) (891, 9) (891,)\n(891,)"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n[0 1]\n[552 339]\n0.980920314254\n"
+      "(891,)\n[0 1]\n[552 339]\n0.980920314254\n"
      ]
     }
    ],
@@ -147,24 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "information schema description:\n<class 'pandas.core.frame.DataFrame'>\nInt64Index: 418 entries, 0 to 417\nData columns (total 11 columns):\nPassengerId    418 non-null int64\nPclass         418 non-null int64\nName           418 non-null object\nSex            418 non-null object\nAge            332 non-null float64\nSibSp          418 non-null int64\nParch          418 non-null int64\nTicket         418 non-null object\nFare           417 non-null float64\nCabin          91 non-null object\nEmbarked       418 non-null object\ndtypes: float64(2), int64(4), object(5)\nmemory usage: 39.2+ KB\nNone\n       PassengerId      Pclass         Age       SibSp       Parch        Fare\ncount   418.000000  418.000000  332.000000  418.000000  418.000000  417.000000\nmean   1100.500000    2.265550   30.272590    0.447368    0.392344   35.627188\nstd     120.810458    0.841838   14.181209    0.896760    0.981429   55.907576\nmin     892.000000    1.000000    0.170000    0.000000    0.000000    0.000000\n25%     996.250000    1.000000   21.000000    0.000000    0.000000    7.895800\n50%    1100.500000    3.000000   27.000000    0.000000    0.000000   14.454200\n75%    1204.750000    3.000000   39.000000    1.000000    0.000000   31.500000\nmax    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200\nSummary of attributes with values missing:\nAge 332\nFare 417\nCabin 91\nEnumerating Sex:\n['male' 'female']\nEnumerating Embarked:\n['Q' 'S' 'C']\nFilling other missing numeric values with zeroeth-order approximation -- the most probable value (mode):\nFilling Age:\ndon't even bother enumerating these fields, just drop them:"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nFeature engineering:\nCleansed training data:\n<class 'pandas.core.frame.DataFrame'>\nInt64Index: 418 entries, 0 to 417\nData columns (total 9 columns):\nPclass          418 non-null int64\nSibSp           418 non-null int64\nParch           418 non-null int64\nFare            418 non-null float64\nGender          418 non-null int32\nEmbarkedEnum    418 non-null int32\nAgeFill         418 non-null float64\nFamilySize      418 non-null int64\nAge*Class       418 non-null float64\ndtypes: float64(3), int32(2), int64(4)\nmemory usage: 29.4 KB\nNone\n           Pclass       SibSp       Parch        Fare      Gender  \\\ncount  418.000000  418.000000  418.000000  418.000000  418.000000   \nmean     2.265550    0.447368    0.392344   35.560497    0.636364   \nstd      0.841838    0.896760    0.981429   55.857145    0.481622   \nmin      1.000000    0.000000    0.000000    0.000000    0.000000   \n25%      1.000000    0.000000    0.000000    7.895800    0.000000   \n50%      3.000000    0.000000    0.000000   14.454200    1.000000   \n75%      3.000000    1.000000    0.000000   31.471875    1.000000   \nmax      3.000000    8.000000    9.000000  512.329200    1.000000   \n\n       EmbarkedEnum     AgeFill  FamilySize   Age*Class  \ncount    418.000000  418.000000  418.000000  418.000000  \nmean       1.866029   29.297847    0.839713   60.524115  \nstd        0.580452   13.038856    1.519072   26.402800  \nmin        1.000000    0.170000    0.000000    0.510000  \n25%        2.000000   22.000000    0.000000   43.125000  \n50%        2.000000   25.000000    0.000000   60.500000  \n75%        2.000000   36.375000    1.000000   72.000000  \nmax        3.000000   76.000000   10.000000  181.500000  \n(418,) (418, 9) None\n(418,)\n[0 1]\n[268 150]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test, save public test as csv: 'PassengerId', 'Survived'\n",
     "import csv\n",
@@ -176,10 +160,19 @@
     "print(np.unique(prediction))\n",
     "print(np.bincount(prediction, minlength=2))\n",
     "\n",
-    "with(open('out/survival.csv', 'w')) as f:\n",
+    "with(open('survival.csv', 'w')) as f:\n",
     "    csv_writer = csv.writer(f)\n",
     "    csv_writer.writerow([\"PassengerId\",\"Survived\"])\n",
-    "    csv_writer.writerows(zip(passenger_ids, prediction))\n"
+    "    csv_writer.writerows(zip(passenger_ids, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
